--- a/activmatesApp/templates/update-account.html
+++ b/activmatesApp/templates/update-account.html
@@ -10,39 +10,39 @@
 <div class="col">
     <a class="nav-link" href="{{ url_for('account_profile') }}"><button class="btn info">back</button> </a>
     <form action="" method="POST">
-        {{ updateAccountForm.hidden_tag() }}
+        {{ form.hidden_tag() }}
         <fieldset class="form-control d-grid gap-3">
             <legend>
                 Account Info
             </legend>
             <div class="form-group username">
-                {{ updateAccountForm.username.label(class="form-control-label") }}
-                {% if updateAccountForm.username.errors %}
-                    {{ updateAccountForm.username(class="form-control-label is-invalid") }}
+                {{ form.username.label(class="form-control-label") }}
+                {% if form.username.errors %}
+                    {{ form.username(class="form-control-label is-invalid") }}
                     <div class="invalid-feedback">
-                        {% for error in updateAccountForm.username.errors %}
+                        {% for error in form.username.errors %}
                             <span>{{ error }}</span>
                         {% endfor %}
                     </div>
                         {% else %}
-                        {{ updateAccountForm.username(class="form-control-label") }}
+                        {{ form.username(class="form-control-label") }}
                 {% endif %}
             </div>
             <div class="form-group email">
-                {{ updateAccountForm.email.label(class="form-control-label") }}
-                {% if updateAccountForm.email.errors %}
-                {{ updateAccountForm.email(class="form-control-label is-invalid") }}
+                {{ form.email.label(class="form-control-label") }}
+                {% if form.email.errors %}
+                {{ form.email(class="form-control-label is-invalid") }}
                 <div class="invalid-feedback">
-                    {% for error in updateAccountForm.email.errors %}
+                    {% for error in form.email.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
                 </div>
                 {% else %}
-                {{ updateAccountForm.email(class="form-control-label") }}
+                {{ form.email(class="form-control-label") }}
                 {% endif %}
             </div>
             <div class="form-group">
-                 {{ updateAccountForm.submit(class="btn btn-outline-info")}}
+                 {{ form.submit(class="btn btn-outline-info")}}
             </div>
         </fieldset>
     </form>
