--- a/activmatesApp/templates/login.html
+++ b/activmatesApp/templates/login.html
@@ -19,46 +19,46 @@
 		</div>
 		<div class="col-md-6 pe-5">
 			<form action="" method="POST" id="login-form">
-					{{ loginForm.hidden_tag() }}
+					{{ form.hidden_tag() }}
 					<fieldset class="form-control d-grid gap-3 me-5">
 							<legend class="border-bottom">
 									Login
 							</legend>
 							<div class="form-group email">
-									{% if loginForm.email.errors %}
-									{{ loginForm.email(class="form-control-label is-invalid", placeholder="Email") }}
+									{% if form.email.errors %}
+									{{ form.email(class="form-control-label is-invalid", placeholder="Email") }}
 									<div class="invalid-feedback">
-											{% for error in loginForm.email.errors %}
+											{% for error in form.email.errors %}
 											<span>{{ error }}</span>
 											{% endfor %}
 									</div>
 									{% else %}
-									{{ loginForm.email(class="form-control-label", placeholder="Email") }}
+									{{ form.email(class="form-control-label", placeholder="Email") }}
 
 									{% endif %}
 							</div>
 							<div class="form-group password">
-									{% if loginForm.password.errors %}
-									{{ loginForm.password(class="form-control-label is-invalid", placeholder="Password")}}
+									{% if form.password.errors %}
+									{{ form.password(class="form-control-label is-invalid", placeholder="Password")}}
 									<div class="invalid-feedback">
-											{% for error in loginForm.password.errors %}
+											{% for error in form.password.errors %}
 											<span>{{ error }}</span>
 											{% endfor %}
 									</div>
 									{% else %}
-									{{ loginForm.password(class="form-control-label", placeholder="Password") }}
+									{{ form.password(class="form-control-label", placeholder="Password") }}
 									{% endif %}
 							</div>
 							<small class="text-muted ml-2">
 									<a href="#">Forgot password?</a>
 							</small>
 							<div class="form-check">
-									{{ loginForm.remember(class="form-check-input")}}
-									{{ loginForm.remember.label(class="form-check-label")}}
+									{{ form.remember(class="form-check-input")}}
+									{{ form.remember.label(class="form-check-label")}}
 							</div>
 					
 					<div class="form-group">
-							{{ loginForm.submit(class="btn btn-outline-info")}}
+							{{ form.submit(class="btn btn-outline-info")}}
 					</div>
 					
 					</fieldset>
