--- a/activmatesApp/templates/new-activity.html
+++ b/activmatesApp/templates/new-activity.html
@@ -6,60 +6,60 @@
 <div class="row">
 	<div class="col mt-3">    
 		{{ profile }}
-		
+	
       {{ current_user.id }}
 
 		<form action="" method="POST">
-			{{ newActivityForm.hidden_tag() }}
+			{{ form.hidden_tag() }}
 			<fieldset class="form-control d-grid gap-3">
 					<legend>
-							Upload your activity
+							{{ legend }}
 					</legend>
           <div class="form-group activity-title">
-            {{ newActivityForm.title.label() }}
+            {{ form.title.label() }}
 
-							{% if newActivityForm.title.errors %}
-							{{ newActivityForm.title(class="form-control-label is-invalid", placeholder="title") }}
+							{% if form.title.errors %}
+							{{ form.title(class="form-control-label is-invalid", placeholder="title") }}
 							<div class="invalid-feedback">
-								{% for error in newActivityForm.title.errors %}
+								{% for error in form.title.errors %}
 								<span>{{ error }}</span>
 								{% endfor %}
 							</div>
 							{% else %}
-							{{ newActivityForm.title(class="form-control-label", placeholder="title") }}
+							{{ form.title(class="form-control-label", placeholder="title") }}
 							{% endif %}
 					</div>
 					<div class="form-group activity-type">
-            {{ newActivityForm.type.label() }}
+            {{ form.type.label() }}
 
-							{% if newActivityForm.type.errors %}
-							{{ newActivityForm.type(class="form-control-label is-invalid", placeholder="Type") }}
+							{% if form.type.errors %}
+							{{ form.type(class="form-control-label is-invalid", placeholder="Type") }}
 							<div class="invalid-feedback">
-								{% for error in newActivityForm.type.errors %}
+								{% for error in form.type.errors %}
 								<span>{{ error }}</span>
 								{% endfor %}
 							</div>
 							{% else %}
-							{{ newActivityForm.type(class="form-control-label", placeholder="Type") }}
+							{{ form.type(class="form-control-label", placeholder="Type") }}
 							{% endif %}
 					</div>
 					<div class="form-group description">
-            {{ newActivityForm.description.label() }}
-							{% if newActivityForm.description.errors %}
-							{{ newActivityForm.description(class="form-control-label is-invalid", placeholder="description") }}
+            {{ form.description.label() }}
+							{% if form.description.errors %}
+							{{ form.description(class="form-control-label is-invalid", placeholder="description") }}
 							<div class="invalid-feedback">
-									{% for error in newActivityForm.description.errors %}
+									{% for error in form.description.errors %}
 									<span>{{ error }}</span>
 									{% endfor %}
 							</div>
 							{% else %}
-							{{ newActivityForm.description(class="form-control-label", placeholder="description") }}
+							{{ form.description(class="form-control-label", placeholder="description") }}
 
 							{% endif %}
 					</div>
 				
 					<div class="form-group">
-							{{ newActivityForm.submit(class="btn btn-outline-info")}}
+							{{ form.submit(class="btn btn-outline-info")}}
 					</div>
 			</fieldset>
 		</form>
