--- a/activmatesApp/templates/view-activity.html
+++ b/activmatesApp/templates/view-activity.html
@@ -9,8 +9,9 @@
       <h5 class="card-title">{{ activity.title }}</h5>
       <h6 class="card-subtitle mb-2 text-muted">{{ activity.type}}</h6>
       <h6 class="card-subtitle mb-2 text-muted">{{ current_user.profile[0].id }}</h6>
-
       <p class="card-text">{{ activity.description}}</p>
+      <h6> {{ activity.address }} </h6>
+
       <a href="#" class="card-link">Card link</a>
       <a href="#" class="card-link">Another link</a>
       {% if activity.profile.id == current_user.profile[0].id %}
