--- a/activmatesApp/templates/login.html
+++ b/activmatesApp/templates/login.html
@@ -4,23 +4,43 @@
 {% block body %}
 <div class="content-section p-5 ">
 	<div class="row">
-		<div class="col-md-6">
-
-		</div>
-		<div class="col-md-6">
+		<div class="col-md-8">
+				<h1>ActivMates - time to find an exercise buddy!</h1>
+				<div class="ms-4 mb-4">
+					<h4>New to a city, and want to meet people in a different way?</h4>
+					<h4>Don't feel safe running alone at night?</h4>
+					<h4>Want to learn a new sport?</h4>
+					<h4>Need someone else to motivate you?</h4>
+				</div>
+				<div class="ms-3">
+					<p class="body">
+						Sign up today to connect with someone in your area
+					</p>
+					<a href="{{ url_for('sign_up') }}" >
+						<button id="sign-up" class="primary">
+							Sign Up
+						</button>
+					</a>
+					<a href="{{ url_for('login') }}" >
+						<button id="login" class="secondary">
+								Login
+						</button>
+					</a>
+				</div>
+				<div>
+					<img src="{{ url_for('static', filename='images/open-doodles-roller-skating.png') }}" height="150px" alt="illustration of person rollerskating">
+					<img src="{{ url_for('static', filename='images/open-doodles-jumping.png') }}" height="150px" alt="illustration of person jumping">
+				</div>
+		</div>	
+		<div class="col-md-4">
+			<div class="col-md-6">
 				{% if error %}
 						<p class=error>{{ error }} </p>
 				{% endif %}
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-6">
-			<img src="{{ url_for('static', filename='images/open-doodles-rolling.png') }}" class="float-md-end me-5" height="250px" alt="illustration of person rollerskating">
-		</div>
-		<div class="col-md-6 pe-5">
-			<form action="" method="POST" id="login-form">
+
+				<form action="" method="POST" id="login-form">
 					{{ form.hidden_tag() }}
-					<fieldset class="form-control d-grid gap-3 me-5">
+					<fieldset class="form-control d-grid gap-3">
 							<legend class="border-bottom">
 									Login
 							</legend>
@@ -60,7 +80,6 @@
 					<div class="form-group">
 							{{ form.submit(class="btn btn-outline-info")}}
 					</div>
-					
 					</fieldset>
 			</form>
 			<div class="pt-3">
@@ -68,6 +87,19 @@
 							Don't have an account yet? <a class="ml-2" href="{{ url_for('sign_up')}}">Sign In</a>
 					</small>
 			</div>
+			</div>
+
+		</div>	
+	</div>
+		
+	
+		
+	
+		<div class="col-md-6">
+			<img src="{{ url_for('static', filename='images/open-doodles-rolling.png') }}" class="float-md-end me-5" height="250px" alt="illustration of person rollerskating">
+		</div>
+		<div class="col-md-6 pe-5">
+			
 		</div>
 	</div>
 </div>
