--- a/activmatesApp/templates/home.html
+++ b/activmatesApp/templates/home.html
@@ -12,6 +12,8 @@
             <h6 class="card-subtitle mb-2 text-muted">{{ activity.profile.user.username }}</h6>
             <h6 class="card-subtitle mb-2 text-muted">{{ activity.address }}</h6>
             <p class="card-text">{{ activity.description}}</p>
+            <p class="card-text">{{ activity.location}}</p>
+
             <a href="{{ url_for('view_activity', activity_id=activity.id) }}" class="card-link">Card link</a>
             <a href="#" class="card-link">Another link</a>
         </div>
