add marshmallow - not working yet

--- a/activmatesApp/static/css/main.css
+++ b/activmatesApp/static/css/main.css
@@ -89,3 +89,10 @@ button.secondary:hover {
 #login-form fieldset{
     width: 100%;
 }
+
+#map {
+    height: 75vmin;
+    width: 75%;
+    margin: 0 auto;
+  }
+       
