--- a/activmatesApp/templates/home.html
+++ b/activmatesApp/templates/home.html
@@ -1,9 +1,23 @@
 {% extends 'layout.html' %}
 
+{% block head %}
 
+<script src="{{ url_for('static', filename='javascript/map-home.js') }}"></script>
+
+{% endblock %}
 
 {% block body %}
 <h1>main search page</h1>
+    <div id="map-section">
+        <div id="locationField">
+            <input id="autocomplete" placeholder="Enter your address"  type="text" class="form-control">
+          </div>
+            <p id="details"></p>
+          <div id="map">
+            
+          </div>
+    </div>
+
     {% for activity in activities %}
     <div class="card" style="width: 18rem;">
         <div class="card-body">
@@ -23,4 +37,7 @@
     <!-- <script async
     src="https://maps.googleapis.com/maps/api/js?key={{ map_key }}&libraries=places&callback=initMap">
     </script> -->
+    <script async
+    src="https://maps.googleapis.com/maps/api/js?key={{ map_key }}&libraries=places&callback=initMap">
+</script>
 {% endblock %}
