--- a/activmatesApp/templates/view-activity.html
+++ b/activmatesApp/templates/view-activity.html
@@ -11,6 +11,7 @@
       <h6 class="card-subtitle mb-2 text-muted">{{ current_user.profile[0].id }}</h6>
       <p class="card-text">{{ activity.description}}</p>
       <h6> {{ activity.address }} </h6>
+      <a href="{{ url_for('user_activities', username=activity.profile.user.username) }}">other posts by user</a>
 
       <a href="#" class="card-link">Card link</a>
       <a href="#" class="card-link">Another link</a>
