--- a/activmatesApp/templates/home.html
+++ b/activmatesApp/templates/home.html
@@ -2,12 +2,13 @@
 
 {% block head %}
 
-<script src="{{ url_for('static', filename='javascript/map-home.js') }}"></script>
+<script src="{{ url_for('static', filename='javascript/map-home.js') }}"> </script>
 
 {% endblock %}
 
 {% block body %}
 <h1>main search page</h1>
+<a href="{{ url_for('home_list_view') }}">list view </a>
     <div id="map-section">
         <div id="locationField">
             <input id="autocomplete" placeholder="Enter your address"  type="text" class="form-control">
@@ -17,34 +18,17 @@
             
           </div>
     </div>
-
-    {% for activity in activities.items %}
-    <div class="card" style="width: 18rem;">
-        <div class="card-body">
-            <h5 class="card-title">{{ activity.title }}</h5>
-            <h6 class="card-subtitle mb-2 text-muted">{{ activity.activity_type.name }}</h6>
-            <h6 class="card-subtitle mb-2 text-muted">{{ activity.profile.user.username }}</h6>
-            <a href="{{ url_for('user_activities', username=activity.profile.user.username) }}">other posts by user</a>
-            <h6 class="card-subtitle mb-2 text-muted">{{ activity.address }}</h6>
-            <p class="card-text">{{ activity.description}}</p>
-            <p class="card-text">{{ activity.location}}</p>
-
-            <a href="{{ url_for('view_activity', activity_id=activity.id) }}" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+    <div class="content-section">
+        <div class="activity-card">
+            <h2 id="title"></h2>
+            <h6 id="userName"></h6>
+            <h3 id="activityType"></h3>
+            <p id="address"></p>
+            <p id="description"></p>
         </div>
-        </div>
-            
-        {% endfor %}
-        {% for page_num in activities.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
-            {% if page_num %}
-                {% if activities.page == page_num %}
-                    <a class="btn btn-outline-info mb-4" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
-                {% else %}
-                    <a class="btn btn-info mb-4" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
-                {% endif %}
-            {% else %}
-            {% endif %}
-        {% endfor %}
+    </div>
+
+ 
     <script async
     src="https://maps.googleapis.com/maps/api/js?key={{ map_key }}&libraries=places&callback=initMap">
 </script>
